--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,201 @@
-appnope @ file:///home/conda/feedstock_root/build_artifacts/appnope_1707233003401/work
-asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1698341106958/work
-comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1710320294760/work
+absl-py==1.3.0
+altair==4.2.0
+anyio==3.6.2
+appnope==0.1.3
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+arrow==1.2.3
+asttokens==2.2.1
+astunparse==1.6.3
+attrs==22.1.0
+backcall==0.2.0
+beautifulsoup4==4.11.1
+bleach==5.0.1
+blinker==1.5
+brotlipy @ file:///Users/runner/miniforge3/conda-bld/brotlipy_1648854303569/work
+cachetools==5.2.0
+certifi==2022.6.15
+cffi @ file:///Users/runner/miniforge3/conda-bld/cffi_1656783163977/work
+charset-normalizer @ file:///home/conda/feedstock_root/build_artifacts/charset-normalizer_1661170624537/work
+click==8.1.3
+cloudpickle==2.2.1
+colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1655412516417/work
+comm==0.1.2
+commonmark==0.9.1
+conda==4.14.0
+conda-package-handling @ file:///Users/runner/miniforge3/conda-bld/conda-package-handling_1649385138064/work
+contourpy==1.0.6
+cryptography @ file:///Users/runner/miniforge3/conda-bld/cryptography_1657174084384/work
 customtkinter==5.2.2
+cycler==0.11.0
 darkdetect==0.8.0
-debugpy @ file:///Users/runner/miniforge3/conda-bld/debugpy_1707444662218/work
-decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1641555617451/work
-exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1704921103267/work
-executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1698579936712/work
-importlib_metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1710971335535/work
-ipykernel @ file:///Users/runner/miniforge3/conda-bld/ipykernel_1708996616394/work
-ipython @ file:///home/conda/feedstock_root/build_artifacts/ipython_1709559745751/work
-jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1696326070614/work
-jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1710255804825/work
-jupyter_core @ file:///Users/runner/miniforge3/conda-bld/jupyter_core_1710257589360/work
-matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1713250518406/work
-nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1705850609492/work
-packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1710075952259/work
-parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1712320355065/work
-pexpect @ file:///home/conda/feedstock_root/build_artifacts/pexpect_1706113125309/work
-pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602536217715/work
-platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1713912794367/work
-prompt-toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1702399386289/work
-psutil @ file:///Users/runner/miniforge3/conda-bld/psutil_1705722460205/work
-ptyprocess @ file:///home/conda/feedstock_root/build_artifacts/ptyprocess_1609419310487/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
-pure-eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1642875951954/work
-Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1700607939962/work
-python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1709299778482/work
-pyzmq @ file:///Users/runner/miniforge3/conda-bld/pyzmq_1713635625175/work
-setuptools==69.5.1
+DateTime==4.7
+deap==1.3.3
+debugpy==1.6.4
+decorator==5.1.1
+defusedxml==0.7.1
+distlib==0.3.6
+dm-tree==0.1.8
+entrypoints==0.4
+executing==1.2.0
+fastjsonschema==2.16.2
+filelock==3.8.0
+flatbuffers==1.12
+fonttools==4.38.0
+fqdn==1.5.1
+gast==0.4.0
+gitdb==4.0.9
+GitPython==3.1.29
+google-auth==2.14.1
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+graphviz==0.20.1
+grpcio==1.50.0
+gwen-ai-models @ file:///Users/nawazrahman/git/gwen-ai-models
+h5py==3.7.0
+idna @ file:///home/conda/feedstock_root/build_artifacts/idna_1642433548627/work
+importlib-metadata==5.0.0
+ipykernel==6.19.4
+ipython==8.7.0
+ipython-genutils==0.2.0
+ipywidgets==8.0.4
+isoduration==20.11.0
+jedi==0.18.2
+Jinja2==3.1.2
+joblib==1.2.0
+jsonpointer==2.3
+jsonschema==4.16.0
+jupyter==1.0.0
+jupyter-console==6.4.4
+jupyter-events==0.5.0
+jupyter_client==7.4.8
+jupyter_core==5.1.0
+jupyter_server==2.0.4
+jupyter_server_terminals==0.4.3
+jupyterlab-pygments==0.2.2
+jupyterlab-widgets==3.0.5
+keras==2.9.0
+Keras-Preprocessing==1.1.2
+kiwisolver==1.4.4
+libclang==14.0.6
+Markdown==3.4.1
+MarkupSafe==2.1.1
+matplotlib==3.6.2
+matplotlib-inline==0.1.6
+mistune==2.0.4
+nbclassic==0.4.8
+nbclient==0.7.2
+nbconvert==7.2.7
+nbformat==5.7.1
+nest-asyncio==1.5.6
+notebook==6.5.2
+notebook_shim==0.2.2
+numpy==1.23.3
+oauthlib==3.2.2
+opt-einsum==3.3.0
+packaging==21.3
+pandas==1.4.2
+pandocfilters==1.5.0
+parso==0.8.3
+patsy==0.5.3
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==9.2.0
+pipenv==2022.11.11
+platformdirs==2.5.4
+plotly==5.10.0
+plotly-express==0.4.1
+prometheus-client==0.15.0
+prompt-toolkit==3.0.36
+protobuf==3.19.6
+psutil==5.9.4
+psycopg2==2.9.5
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyarrow==9.0.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycosat @ file:///Users/runner/miniforge3/conda-bld/pycosat_1649385121707/work
+pycparser @ file:///home/conda/feedstock_root/build_artifacts/pycparser_1636257122734/work
+pydeck==0.8.0b4
+pydot==1.4.2
+pygame==2.1.2
+Pygments==2.13.0
+Pympler==1.0.1
+pynput==1.7.6
+pyobjc-core==9.0
+pyobjc-framework-ApplicationServices==9.0
+pyobjc-framework-Cocoa==9.0
+pyobjc-framework-Quartz==9.0
+pyOpenSSL @ file:///home/conda/feedstock_root/build_artifacts/pyopenssl_1643496850550/work
+pyparsing==3.0.9
+pyrsistent==0.18.1
+PySocks @ file:///Users/runner/miniforge3/conda-bld/pysocks_1648857351433/work
+python-dateutil==2.8.2
+python-json-logger==2.0.4
+pytz==2022.5
+pytz-deprecation-shim==0.1.0.post0
+PyYAML==6.0
+pyzmq==24.0.1
+qtconsole==5.4.0
+QtPy==2.3.0
+requests @ file:///home/conda/feedstock_root/build_artifacts/requests_1656534056640/work
+requests-oauthlib==1.3.1
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rich==12.6.0
+rsa==4.9
+ruamel-yaml-conda @ file:///Users/runner/miniforge3/conda-bld/ruamel_yaml_1653464701544/work
+scikit-learn==1.1.1
+scipy==1.8.1
+semver==2.13.0
+Send2Trash==1.8.0
 six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
-stack-data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1669632077133/work
-tornado @ file:///Users/runner/miniforge3/conda-bld/tornado_1708363367885/work
-traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1713535121073/work
-typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1712329955671/work
-wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1704731205417/work
-wheel==0.43.0
-zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1695255097490/work
+smmap==5.0.0
+sniffio==1.3.0
+soupsieve==2.3.2.post1
+SQLAlchemy==1.4.27
+SQLAlchemy-Utils==0.38.3
+stack-data==0.6.2
+statsmodels==0.13.2
+stopit==1.1.2
+streamlit==1.13.0
+streamlit-lottie==0.0.3
+streamlit-option-menu==0.3.2
+tenacity==8.1.0
+tensorboard==2.9.1
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow-estimator==2.9.0
+tensorflow-macos==2.9.0
+tensorflow-probability==0.19.0
+termcolor==2.1.0
+terminado==0.17.1
+threadpoolctl==3.1.0
+tinycss2==1.2.1
+toml==0.10.2
+toolz @ file:///home/conda/feedstock_root/build_artifacts/toolz_1657485559105/work
+tornado==6.2
+TPOT==0.11.7
+tqdm @ file:///home/conda/feedstock_root/build_artifacts/tqdm_1649051611147/work
+traitlets==5.8.0
+typing_extensions==4.4.0
+tzdata==2022.5
+tzlocal==4.2
+update-checker==0.18.0
+uri-template==1.2.0
+urllib3 @ file:///home/conda/feedstock_root/build_artifacts/urllib3_1658789158161/work
+uuid==1.30
+validators==0.20.0
+virtualenv==20.16.7
+virtualenv-clone==0.5.7
+wcwidth==0.2.5
+webcolors==1.12
+webencodings==0.5.1
+websocket-client==1.4.2
+Werkzeug==2.2.2
+widgetsnbextension==4.0.5
+wrapt==1.14.1
+xgboost==1.7.1
+zipp==3.10.0
+zope.interface==5.5.0
